--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.7.4"
-  }
+  },
+  "packageManager": "yarn@3.2.3"
 }
