--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:run": "nodemon dist/main.js"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "express": "^4.18.1"
   },
   "devDependencies": {
@@ -15,6 +16,7 @@
     "esbuild": "^0.14.50",
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
+    "prisma": "^4.2.1",
     "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.2.3"
