--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "my-quick-node-app",
   "license": "MIT",
   "scripts": {
-    "dev": "run-p dev:*",
+    "preinstall": "only-allow pnpm",
+    "dev": "concurrently 'pnpm dev:build' 'pnpm dev:run",
     "dev:build": "esbuild src/server.ts --platform=node --bundle --outfile=dist/main.js --watch",
     "dev:run": "nodemon dist/main.js"
   },
@@ -13,11 +14,10 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.1",
+    "concurrently": "^7.6.0",
     "esbuild": "^0.14.50",
     "nodemon": "^2.0.19",
-    "npm-run-all": "^4.1.5",
     "prisma": "^4.2.1",
     "typescript": "^4.7.4"
-  },
-  "packageManager": "yarn@3.2.3"
+  }
 }
