--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "preinstall": "npx only-allow pnpm",
     "dev": "concurrently 'pnpm dev:build' 'pnpm dev:run'",
     "dev:build": "esbuild src/server.ts --platform=node --bundle --outfile=dist/main.js --watch",
-    "dev:run": "nodemon dist/main.js",
+    "dev:run": "dotenv -- nodemon dist/main.js",
     "test": "vitest run",
     "test:w": "vitest"
   },
@@ -19,6 +19,7 @@
     "@types/node": "^18.6.1",
     "@vitest/ui": "^0.29.7",
     "concurrently": "^7.6.0",
+    "dotenv-cli": "^7.1.0",
     "esbuild": "^0.14.50",
     "nodemon": "^2.0.19",
     "prisma": "^4.2.1",
