--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "test:w": "vitest"
   },
   "dependencies": {
-    "@prisma/client": "^4.2.1",
-    "express": "^4.18.1"
+    "@hono/node-server": "^0.6.0",
+    "@prisma/client": "^4.14.0",
+    "hono": "^3.1.8"
   },
   "devDependencies": {
-    "@fast-check/vitest": "^0.0.3",
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.6.1",
-    "@vitest/ui": "^0.29.7",
-    "concurrently": "^7.6.0",
-    "dotenv-cli": "^7.1.0",
-    "esbuild": "^0.14.50",
-    "nodemon": "^2.0.19",
-    "prisma": "^4.2.1",
-    "typescript": "^4.7.4",
-    "vitest": "^0.29.7"
+    "@fast-check/vitest": "^0.0.5",
+    "@types/node": "^20.1.2",
+    "@vitest/ui": "^0.31.0",
+    "concurrently": "^8.0.1",
+    "dotenv-cli": "^7.2.1",
+    "esbuild": "^0.17.18",
+    "nodemon": "^2.0.22",
+    "prisma": "^4.14.0",
+    "typescript": "^5.0.4",
+    "vitest": "^0.31.0"
   }
 }
